--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,8 @@
 __pycache__/
 *.py[cod]
 *$py.class
-*.ipynb
-
+*.pyc
+*.pyo
 # C extensions
 *.so
 
@@ -138,3 +138,7 @@ workspace.code-workspace
 results
 mmocr/core/font.TTF
 workdirs/
+
+data/
+output/
+work_dir/
